--- a/Aula 2.ipynb
+++ b/Aula 2.ipynb
@@ -238,11 +238,11 @@
     "\n",
     "Isso pode ser visto seguindo as manipulações abaixo.\n",
     "\n",
-    "$$\n",
+    "\\begin{equation}\n",
     "    \\max_{\\substack{v \\\\ \\norm{v} = 1}}\\norm{Av}^2 = v_i^TA^TAv_i \\\\\n",
     "    \\max_{\\substack{v \\\\ \\norm{v} = 1}}\\norm{Av}^2 = v_i^T\\lambda_i v_i \\\\\n",
     "    \\max_{\\substack{v \\\\ \\norm{v} = 1}}\\norm{Av}^2 = \\lambda_i \\\\\n",
-    "$$\n",
+    "\\end{equation}\n",
     "\n",
     "Onde $v_i$ é um auto vetor unitário e $\\lambda_i$ o auto valor associado a ele.\n",
     "\n",
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
